Fix check answer and question type Fix bugs Fix swagger
